Bug 1183729 - error: 'HasDangerousPublicDestructor' is not a template r=jcranmer a=bustage fix CLOSED TREE try: -b do -p all -u all -t none