mailnews/compose/public/nsMsgAttachmentData.h
@@ -97,15 +97,17 @@ public:
   uint32_t    m_maxLineLength;
 };
 
-namespace mozilla {
-template <> struct HasDangerousPublicDestructor<nsMsgAttachmentData>
-{
-  static const bool value = true;
-};
-template <> struct HasDangerousPublicDestructor<nsMsgAttachedFile>
-{
-  static const bool value = true;
-};
-} // namespace mozilla
-
+#undef MOZ_ASSERT_TYPE_OK_FOR_REFCOUNTING
+#ifdef MOZ_IS_DESTRUCTIBLE
+#define MOZ_ASSERT_TYPE_OK_FOR_REFCOUNTING(X) \
+  static_assert(!MOZ_IS_DESTRUCTIBLE(X) || \
+                mozilla::IsSame<X, nsMsgAttachmentData>::value, \
+                mozilla::IsSame<X, nsMsgAttachedFile>::value, \
+                "Reference-counted class " #X " should not have a public destructor. " \
+                "Try to make this class's destructor non-public. If that is really " \
+                "not possible, you can whitelist this class by providing a " \
+                "HasDangerousPublicDestructor specialization for it.");
+#else
+#define MOZ_ASSERT_TYPE_OK_FOR_REFCOUNTING(X)
+#endif
 #endif
